--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "index.js",
   "scripts": {
     "prestart": "webpack",
-    "start": "nodemon app ",
-    "poststart": "nodemon --watch webpack.config.js ./node_modules/.bin/webpack"
+    "start": "node app ",
+    "poststart": "webpack"
   },
   "author": "hari adhikari",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.16.1",
     "babel-preset-stage-1": "^6.24.1",
     "body-parser": "^1.17.2",
     "bootstrap": "^3.3.7",
@@ -23,8 +24,14 @@
     "lodash": "^4.17.4",
     "mongoose": "^4.10.3",
     "path": "^0.12.7",
+    "query-string": "^4.3.4",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-bootstrap": "^0.31.0",
+    "react-dom": "^15.5.4",
+    "react-redux": "^5.0.5",
+    "react-router-dom": "^4.1.1",
+    "redux": "^3.6.0",
+    "redux-promise": "^0.5.3"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
