--- a/package.json
+++ b/package.json
@@ -17,12 +17,17 @@
     "bootstrap": "^3.3.7",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.3",
+    "crypto": "0.0.3",
     "dotenv": "^4.0.0",
     "dotenv-webpack": "^1.4.5",
     "express": "^4.15.3",
+    "express-jwt": "^5.3.0",
     "jquery": "^3.2.1",
+    "jsonwebtoken": "^7.4.1",
     "lodash": "^4.17.4",
     "mongoose": "^4.10.3",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
