--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
-    "redux-promise": "^0.5.3"
+    "redux-persist": "^4.8.0",
+    "redux-promise": "^0.5.3",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
