--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "prestart": "webpack",
-    "start": "node app ",
-    "poststart": "webpack"
+    "start": "node app "
   },
   "author": "hari adhikari",
   "license": "ISC",
@@ -33,8 +32,11 @@
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
-    "react-router-dom": "^4.1.1",
+    "react-router": "^4.0.0",
+    "react-router-dom": "^4.0.0",
+    "react-transition-group": "^1.2.0",
     "redux": "^3.6.0",
+    "redux-form": "^6.6.3",
     "redux-persist": "^4.8.0",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0"
