--- a/package.json
+++ b/package.json
@@ -33,9 +33,12 @@
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
+    "react-js-pagination": "^2.1.0",
+    "react-rating": "^0.8.0",
     "react-redux": "^5.0.5",
     "react-router": "^4.0.0",
     "react-router-dom": "^4.0.0",
+    "react-timeout": "^1.0.1",
     "react-transition-group": "^1.2.0",
     "redux": "^3.6.0",
     "redux-form": "^6.6.3",
