register and login layout, password reset completed

--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "author": "hari adhikari",
   "license": "ISC",
   "dependencies": {
-    "S": "0.0.1",
     "axios": "^0.16.1",
     "babel-preset-stage-1": "^6.24.1",
     "body-parser": "^1.17.2",
@@ -28,11 +27,13 @@
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "mongoose": "^4.10.3",
+    "nodemailer": "^4.0.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
+    "react-addons-css-transition-group": "^15.6.0",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
     "react-js-pagination": "^2.1.0",
