--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "babel-preset-stage-1": "^6.24.1",
     "body-parser": "^1.17.2",
     "bootstrap": "^3.3.7",
+    "cloudinary": "^1.9.0",
+    "connect-multiparty": "^2.0.0",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.3",
     "crypto": "0.0.3",
@@ -22,6 +24,8 @@
     "dotenv-webpack": "^1.4.5",
     "express": "^4.15.3",
     "express-jwt": "^5.3.0",
+    "form-data": "^2.2.0",
+    "fs": "0.0.1-security",
     "jquery": "^3.2.1",
     "jsonwebtoken": "^7.4.1",
     "lodash": "^4.17.4",
