--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-      "build": "webpack",
-      "start": "node app "
+    "prestart": "webpack",
+    "start": "node app "
   },
   "engines": {
     "node": "8.2.1",
